# grpc_server

./: .gitignore  CMakeLists.txt  error  grpc_server.cpp  main.cpp
config/: config.json
proto/: service.grpc.pb.cc  service.grpc.pb.h  service.pb.cc  service.proto
